Completed Home Page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,24 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+* {
+  font-family: Outfit;
+}
+
+@layer utilities {
+  .bg-primary {
+    background-color: #5f6fff;
+  }
+  .grid-cols-auto {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+}
+
+/* Show the underline for the active menu */
+.active hr {
+  @apply block;
+}
+
+::-webkit-scrollbar {
+  @apply hidden;
+}
