--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 @import "tailwindcss";
 
 * {
@@ -7,6 +7,9 @@
 
 @layer utilities {
   .bg-primary {
+    background-color: #5f6fff;
+  }
+  .hover\:bg-primary:hover {
     background-color: #5f6fff;
   }
   .grid-cols-auto {
