Completed Login and Sign Up Page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,9 @@
   .bg-primary {
     background-color: #5f6fff;
   }
+  .text-primary {
+    color: #5f6fff;
+  }
   .hover\:bg-primary:hover {
     background-color: #5f6fff;
   }
