--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 @import "tailwindcss";
 
 @layer utilities {
@@ -20,4 +22,8 @@
 
 ::-webkit-scrollbar{
   @apply hidden
+}
+
+* {
+  font-family: Outfit;
 }
